# FileHandlingTools

./: .gitignore  CLAUDE.md  README.md  modelmap.py  models.json  pyproject.toml  pytest.ini  requirements.txt  tui.py
convert/: common.py  docx_to_md.py  pdf_to_txt.py  pptx_to_md.py
core/: __init__.py  ollama.py  openai_compat.py  pages.py
docs/plans/: 2026-06-13-pdf-translate-reconstruct.md  2026-06-25-convert-document-tools.md
docs/specs/: 2026-06-13-pdf-translate-reconstruct-design.md  2026-06-25-convert-document-conversion-tools-design.md
docs/superpowers/plans/: 2026-06-25-convert-document-tools.md
docs/superpowers/runs/: 2026-06-25-convert-document-tools.md
pdftranslate/: __init__.py  cli.py  common.py  extract.py  rebuild.py  render_qa.py  translate.py
tests/: conftest.py  test_assemble.py  test_cli.py  test_common.py  test_convert_common.py  test_convert_integration.py  test_docx_to_md.py  test_extract.py  test_ingest.py  test_modelmap.py  test_openai_compat.py  test_pdf_to_md.py  test_pdf_to_txt.py  test_pipeline.py  test_pptx_to_md.py  test_rebuild.py  test_render.py  test_render_qa.py  test_transcribe.py  test_transcribe_pipeline.py  test_translate.py  test_translate_pipeline.py  test_tui.py
tests/test_docs/: deck.pptx  report.docx
tools/convert/: docx_to_md.py  pdf_to_md.py  pdf_to_txt.py  pptx_to_md.py
tools/transcribe/: __init__.py  pipeline.py  render.py
tools/translate/: pipeline.py  rebuild.py
transcribe/: assemble.py  ingest.py  pipeline.py  render.py  transcribe.py
translate/: __init__.py  cli.py  rebuild.py  translate.py
(+5 files in other folders)
